# libplist

./: CMakeLists.txt  README.md  azure-pipelines.yml  libplist.vcxproj
debian/: libplist3.symbols
include/plist/: plist.h
src/: bplist.c  plist.c  plist.h  ptrarray.c  xplist.c
test/: plist_cmp.vcxproj
